Remove invalid casts from OrderMapper