@@ -1,22 +1,28 @@
 package com.example.agrolink.mapper;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 import com.example.agrolink.dto.OrderDTO;
 import com.example.agrolink.dto.OrderSummaryDTO;
-
-import java.util.List;
-
 import com.example.agrolink.entity.Order;
 
 public final class OrderMapper {
 
     private OrderMapper() {
-        throw new UnsupportedOperationException("Utility class");
+
+        throw new UnsupportedOperationException(
+                "Utility class"
+        );
     }
 
     // ================== ENTITY → DTO ==================
 
     public static OrderDTO toDTO(Order order) {
-        if (order == null) return null;
+
+        if (order == null) {
+            return null;
+        }
 
         return new OrderDTO(
                 order.getId(),
@@ -31,10 +37,14 @@ public final class OrderMapper {
         );
     }
 
-    // ================== ENTITY → SUMMARY DTO ==================
+    // ================== ENTITY → SUMMARY ==================
 
-    public static OrderSummaryDTO toSummaryDTO(Order order) {
-        if (order == null) return null;
+    public static OrderSummaryDTO toSummaryDTO(
+            Order order) {
+
+        if (order == null) {
+            return null;
+        }
 
         return new OrderSummaryDTO(
                 order.getId(),
@@ -49,58 +59,73 @@ public final class OrderMapper {
         );
     }
 
-    // ================== LIST MAPPING ==================
+    // ================== LIST ==================
 
-    public static List<OrderDTO> toDTOList(List<Order> orders) {
-        if (orders == null) return List.of();
+    public static List<OrderDTO> toDTOList(
+            List<Order> orders) {
+
+        if (orders == null) {
+            return List.of();
+        }
 
         return orders.stream()
                 .map(OrderMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public static List<OrderSummaryDTO> toSummaryDTOList(List<Order> orders) {
-        if (orders == null) return List.of();
+    public static List<OrderSummaryDTO> toSummaryDTOList(
+            List<Order> orders) {
+
+        if (orders == null) {
+            return List.of();
+        }
 
         return orders.stream()
                 .map(OrderMapper::toSummaryDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // ================== HELPERS ==================
 
-    private static String getCropName(Order order) {
+    private static String getCropName(
+            Order order) {
+
         return order.getCrop() != null
-                ? ((Object) order.getCrop()).getName()
+                ? order.getCrop().getName()
                 : "Unknown Crop";
     }
 
-    private static Long getCropId(Order order) {
+    private static Long getCropId(
+            Order order) {
+
         return order.getCrop() != null
-                ? ((OrderDTO) order.getCrop()).getId()
+                ? order.getCrop().getId()
                 : null;
     }
 
-    private static String getBuyerEmail(Order order) {
+    private static String getBuyerEmail(
+            Order order) {
+
         return order.getBuyer() != null
-                ? ((Object) order.getBuyer()).getEmail()
+                ? order.getBuyer().getEmail()
                 : "Unknown Buyer";
     }
 
-    private static String getStatus(Order order) {
+    private static String getStatus(
+            Order order) {
+
         return order.getStatus() != null
-                ? ((Object) order.getStatus()).name()
+                ? order.getStatus().name()
                 : "UNKNOWN";
     }
 
-    private static String getStatusLabel(Order order) {
-        if (order.getStatus() == null) return "Unknown";
+    private static String getStatusLabel(
+            Order order) {
 
-        switch (order.getStatus()) {
-            case PENDING: return "Pending";
-            case CONFIRMED: return "Confirmed";
-            case CANCELLED: return "Cancelled";
-            default: return "Unknown";
+        if (order.getStatus() == null) {
+            return "Unknown";
         }
+
+        return order.getStatus().getLabel();
     }
 }
